Fixed some spacing issues and blocking. Input now covers up text that scrolls underneath it.

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -5,6 +5,7 @@
 
 $primary: #2F3732;
 $background: #c9c8c8;
+$background-light: #f5f5f5;
 
 body {
     padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -68,7 +69,7 @@ body {
 	height: 100%;
 
 	box-sizing: border-box;
-	background-color: #f5f5f5;
+	background-color: $background-light;
 	padding-left: 10px;
 
 	z-index: 10;
@@ -398,16 +399,22 @@ body {
 		position: absolute;		
 }
 
-#chat {
-	overflow-y: hidden;
-
-	input {
+#chat-input-region {
 		position: absolute;
 		bottom: 0px;
-		left: 10px;
-		width: 370px;
-	}
+		left: 0px;
+		right: 55px;
 
+		width: 370px;
+		height: 35px;
+
+		padding-left: 10px;
+
+		background-color: $background-light;
+}
+
+#chat {
+	overflow-y: hidden;
 
 	
 	#chat-container {
@@ -420,14 +427,14 @@ body {
 		top: 0px;
 		bottom: 0px;
 		left: 0px;
-		right: 45px;
+		right: 55px;
 		overflow-y: scroll;
 
 		#chat-list-container {
 			height: auto;
 			width: auto;
 
-			margin: 0px 0px 50px 0px;
+			margin: 0px 0px 45px 0px;
 
 			.chat-message {
 
